--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.15.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
