--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.4.0",
+    "react-push-notification": "^1.5.4",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
